# danbooru-tags-translator-web-app

./: README.md  pyproject.toml  server.py
frontend/: package.json
frontend/src/: App.tsx
frontend/src/components/: TranslationApp.tsx
scripts/: server.bat  server.sh
